tests/c/internal/negative_case/bad_scope_while_block_leak.c
// Expected: compile fail (variable declared in while block used outside)
int main() {
  while (1) {
    int t = 7;
    break;
  }
  return t;
}
